kustomize/apps/erddap/overlays/pmel-dev/erddap-mw-upgrade.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: erddap-upgrade
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
   headers:
     contentSecurityPolicy: "upgrade-insecure-requests"
