kustomize/apps/erddap/overlays/pmel-dev/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erddap
spec:
  template:
    spec:
      containers:
      - name: erddap
        resources:
          requests:
            cpu: 1000m
            memory: 5Gi
          limits:
            cpu: 4000m
            memory: 10Gi
      - name: erddap-sidecar
        resources:
          requests:
            cpu: 500m
            memory: 256Mi
          limits:
            cpu: 1000m
            memory: 1Gi
