kustomize/apps/erddap/overlays/pmel-dev/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: erddap-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /msp/data
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: envds-erddap
spec:
  entryPoints:
    - web
    - websecure # Assuming you have HTTPS enabled on AWS
  routes:
  # Match the AWS domain AND the specific path prefix
  - match: Host(`data.pmel-dev.noaa.gov`) && PathPrefix(`/msp/data`)
    kind: Rule
    services:
    - name: envds-erddap
      port: 80
      passHostHeader: true
    middlewares:
    - name: erddap-stripprefix
